modified docker file to support cloud host

--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -3,15 +3,17 @@ FROM maven:3.9.6-amazoncorretto-21 AS build
 
 WORKDIR /app
 
-# Copy pom.xml first so dependencies are cached
+# Copy pom.xml first so dependencies can be cached
 COPY pom.xml .
-RUN mvn dependency:go-offline
+
+# Download dependencies (safe, does NOT fetch heavy reporting plugins)
+RUN mvn -q -DskipTests dependency:resolve
 
 # Copy the entire source code
 COPY src ./src
 
 # Build the Spring Boot app
-RUN mvn -DskipTests clean package
+RUN mvn -q -DskipTests clean package
 
 
 # Step 2: Run stage using lightweight Corretto 21 JDK
@@ -22,7 +24,6 @@ WORKDIR /app
 # Copy jar from the build stage
 COPY --from=build /app/target/*.jar app.jar
 
-# Render default port handling
 EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
