--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -1,13 +1,25 @@
 spring.application.name=app
 
-spring.datasource.url=jdbc:h2:file:./data/mydb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.datasource.url=jdbc:h2:file:./data/mydb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
+
+# spring.jpa.hibernate.ddl-auto=update
+
+# # Optional but useful
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/db
+
+jwt.secret ="junaidArmaan"
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/smartQuiz
+spring.datasource.username=haisy
+spring.datasource.password=junnu1522
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-
-# Optional but useful
-spring.h2.console.enabled=true
-spring.h2.console.path=/db
-
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
