--- a/backend/app/src/main/resources/application.properties
+++ b/backend/app/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.application.name=app
 jwt.secret ="junaidArmaan"
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/smartQuiz
+spring.datasource.url=jdbc:mysql://localhost:3306/smartQuiz?createDatabaseIfNotExist=true
 spring.datasource.username=haisy
 spring.datasource.password=junnu1522
 
